Fixed swagger for /tickets/:ticketId Updated /tickets/:ticketId endpoint so that it returns a better structured object Improved ticket model Removed some usage of strings in favor of constants for ticket status and category Removed unused imports
