# models/ticket/consts.js
@@ -8,10 +8,21 @@ const ticketStatuses = [
 	ticketStatusSolved,
 	ticketStatusDeleted,
 ]
+
+const ticketCategoryDispute = "DISPUTE"
+const ticketCategoryGeneralInquiry = "GENERAL_INQUIRY"
+const ticketCategoryPayment = "PAYMENT"
+const ticketCategories = [
+	ticketCategoryDispute,
+	ticketCategoryGeneralInquiry,
+	ticketCategoryPayment,
+]
 module.exports = {
 	ticketStatusNew,
 	ticketStatusInProgress,
 	ticketStatusSolved,
 	ticketStatusDeleted,
 	ticketStatuses,
+	ticketCategoryDispute,
+	ticketCategories,
 }
