# models/ticket/model.js
@@ -1,3 +1,4 @@
+const { ticketCategories } = require("./consts")
 const { ticketStatuses } = require("./consts")
 const { ticketStatusNew } = require("./consts")
 const { Schema, model, ObjectId } = require("mongoose")
@@ -13,10 +14,10 @@ const messagesSchema = new Schema(
 
 const ticketsSchema = new Schema(
 	{
-		subject: { type: String, unique: false, required: true },
-		category: { type: String, required: true },
-		matchId: { type: ObjectId, required: false, ref: "Matches" },
-		tournamentId: { type: ObjectId, required: false, ref: "Tournaments" },
+		subject: { type: String, required: true },
+		category: { type: String, required: true, enum: ticketCategories },
+		matchId: { type: ObjectId },
+		tournamentId: { type: ObjectId, ref: "Tournaments" },
 		attachments: { type: Array, required: true },
 		status: {
 			type: String,
@@ -24,8 +25,6 @@ const ticketsSchema = new Schema(
 			default: ticketStatusNew,
 			enum: ticketStatuses,
 		},
-		userId: { type: ObjectId, required: true, ref: "Users" },
-		userIdTwo: { type: ObjectId, required: false, ref: "Users" }, //Only in case of disputes
 		messages: [messagesSchema],
 	},
 	{ timestamps: true }
